# Programming-Languages-Labs

assignment-1-io-library/: lib.inc
assignment-2-dictionary/: colon.inc  dict.asm  lib.asm  lib.inc  main.asm  makefile  test.py  words.inc
assignment-2-dictionary/test_data/: input.txt  output.txt
assignment-3-image-rotation/solution/: CMakeLists.txt
assignment-3-image-rotation/solution/include/: angle_parser.h  bmp.h  files_logic.h  image.h  main.h
assignment-3-image-rotation/solution/src/: angle_parser.c  bmp.c  files_logic.c  image.c  main.c
assignment-3-image-rotation/tester/include/: image.h
assignment-3-image-rotation/tester/src/: main.c
assignment-4-memory-allocator/src/: CMakeLists.txt  main.c  mem.c
assignment-4-memory-allocator/src/tests/: tests.c  tests.h
